--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@react-hook/mouse-position": "^4.1.3",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.28.0",
-    "next": "14.1.0",
+    "next": "^14.1.1",
     "next-sanity": "^7.1.4",
     "react": "^18",
     "react-dom": "^18",
